--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>WELCOME TO T3TH'S HOMEWORK</h1>
+    <h1>WELCOME TO T3H'S HOMEWORK</h1>
     <div class="btn">
         <button class="btn__homework" type="submit">
             <a href="./BTVN__buoi-2/">Bài 1</a>
