complete BTVN__buoi-4

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button class="btn__homework" type="submit">
             <a href="./BTVN__buoi-3.2/">Bài 3</a>
         </button>
+        <button class="btn__homework" type="submit">
+            <a href="./BTVN__buoi-4/">Bài 4</a>
+        </button>
     </div>
 </body>
 </html>
