add required in input

--- a/BTVN__buoi-4/index.html
+++ b/BTVN__buoi-4/index.html
@@ -117,8 +117,8 @@
                     <div class="ft-container-item none-border-right">
                         <h4 class="info-tittle">MUA HÀNG ONLINE NHẬN ƯU ĐÃI</h4>
                         <div class="info-from">
-                            <input type="text" placeholder="Họ tên" class="info-form-input">
-                            <input type="number" placeholder="Số điện thoại" class="info-form-input">
+                            <input type="text" required="" placeholder="Họ tên" class="info-form-input">
+                            <input type="number" required="" placeholder="Số điện thoại" class="info-form-input">
                             <input type="email" placeholder="Địa chỉ Email" class="info-form-input">
                             <textarea name="" id="" placeholder="Yêu cầu của quý khách" class="info-form-input"
                                 rows="2"></textarea>
