--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
     <h1>WELCOME TO T3H'S HOMEWORK</h1>
     <div class="btn">
-        <button class="btn__homework" type="submit">
+        <div class="btn__homework">
             <a href="./BTVN__buoi-2/">Bài 1</a>
-        </button>
-        <button class="btn__homework" type="submit">
+        </div>
+        <div class="btn__homework">
             <a href="./BTVN__buoi-3/">Bài 2</a>
-        </button>
-        <button class="btn__homework" type="submit">
+        </div>
+        <div class="btn__homework">
             <a href="./BTVN__buoi-3.2/">Bài 3</a>
-        </button>
-        <button class="btn__homework" type="submit">
+        </div>
+        <div class="btn__homework">
             <a href="./BTVN__buoi-4/">Bài 4</a>
-        </button>
+        </div>
     </div>
 </body>
 </html>
