--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="btn__homework">
             <a href="./BTVN__buoi-4/">Bài 4</a>
         </div>
+        <div class="btn__homework">
+            <a href="./BTVN__BootStrap/">TH BootStrap</a>
+        </div>
     </div>
 </body>
 </html>
